[package]
name = "mult_lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
home = "0.5.9"
bincode = "1.3.3"
sysinfo = "0.30.5"
colored = "2.1.0"
prettytable = "0.10.0"
term = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus"
] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
