[package]
name = "mult_spawn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mult_lib = { path = "../mult_lib" }
home = "0.5.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus"
] }
